--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angucomplete-alt",
+  "name": "angucomplete-alt-rein-fork",
   "description": "Awesome Autocompleteness for AngularJS",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ghiden/angucomplete-alt.git"
+    "url": "https://github.com/rntorm/angucomplete-alt.git"
   },
   "engines": {
     "node": ">= 0.8.4"
